@@ -1,1 +1,6 @@
+[B]1.1.0[/B] - 03-06-2018
+- Added &quality= plugin route call for manual quality selection (overrides setting in options)
+- Added MPEG-DASH playback capability
+- Improved README.md
+
 1.0.0 - Initial Version
